# bevy-series1

./: Cargo.toml  README.md
bevy-dino/: Cargo.toml
bevy-dino/src/: main.rs  obstacles.rs
bevy-intro/: Cargo.toml
bevy-intro/src/: main.rs
dino-runner/: Cargo.toml
dino-runner/src/: main.rs  movement.rs  obstacles.rs  player.rs
