[package]
name = "bevy-intro"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "51a5070cd2d3d7262616b2efc8a6cd3b1991d7e6" }
